# ladderly-3

./: .env  .env.test  .eslintrc.js  .gitignore  .migration.json  AGENTS.md  CLAUDE.md  CONTRIBUTING.md  Makefile  README.md  next.config.js  package-lock.json  package.json  prettier.config.js  prettier.config.mjs  prettier.config.ts  providers.tsx  stylelint.config.js  tailwind.config.js  tsconfig.json  types.ts  vercel.json  vitest.config.ts
.gemini/: settings.json
.husky/: pre-commit
app/: blitz-server.ts
blitz-app/: .env.template  .eslintrc.js  next.config.js  package-lock.json  package.json  prettier.config.js  stylelint.config.js  tsconfig.json  (+3 more)
scripts/youtube-transcriber/: .env  README.md  consolidate.py  consolidated_transcript.txt  low_value_transcript_urls.json  main.py  priming_prompt.txt  pyproject.toml
scripts/youtube-transcriber/video_data/: -2t6dbC5h5I.json  -G6el6SI5Os.json  -WGkg2XKV4o.json  -ffV0YJ8Wi4.json  -jTdegCj1EA.json  00z9T1jZqhM.json  048hiomJl2o.json  0QfrGui1uWw.json  0ZGokJgesjY.json  0h5MbV-iNqU.json  0sYZP549u7M.json  0v4rKpp444s.json  0vNZJ6JJE9I.json  0xzCf4_2rZ4.json  110eDw1aa_A.json  12aoOgzfbX4.json  1C4gYY_whu4.json  1GU34An1lXU.json  1JGvx5Llqj4.json  1JTynN0UQp0.json  1RFZGUrxII0.json  1kU_ASADlPY.json  1vdZIwIi32A.json  1yJYJ4z99Ew.json  2TsRXGdtHKU.json  2z5KCEVQUS0.json  31NwOdIWdzc.json  389vl1WAOJM.json  3QbPH_SMkio.json  3USrUfh1rcw.json  3ZfzLXNBjgQ.json  3kuzjYuiqpU.json  3o5TBMzONtk.json  3yLk37WEHBo.json  4MAhgWc6ONg.json  4YXWpioEIUA.json  4aAIPhmIW6M.json  4fLclrpAfxc.json  5HHy8VM3zdQ.json  5REzpIRxadc.json  (+408 more)
(+1238 files in other folders)
