[tool.poetry]
name = "youtube-transcriber"
version = "0.1.0"
description = ""
authors = ["John Vandivier <john@ladderly.io>"]
license = "MIT"
readme = "README.md"
packages = [{include = "youtube_transcriber"}]

[tool.poetry.dependencies]
python = "^3.11"
black = "^22.3.0"
invoke = "^2.2.0"
youtube-dl = "^2021.12.17"
youtube-transcript-api = "^0.6.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.black]
line-length = 88
include = '\.pyi?$'
exclude = '''
(
  /(
      \.eggs         # exclude a few common directories in the
    | \.git          # root of the project
    | \.hg
    | \.mypy_cache
    | \.tox
    | \.venv
    | _build
    | buck-out
    | build
    | dist
  )/
)
'''
